--- a/beehive/js/components/navbarComponent/navbarComponent.css
+++ b/beehive/js/components/navbarComponent/navbarComponent.css
@@ -1,5 +1,5 @@
 .navbarComponent{
-    position: fixed;
+    position: absolute;
     background-color: var(--secondary-color);
     width: 100%;
     height: var(--navbar-height);
