--- a/beehive/js/components/beesComponent/beesComponent.css
+++ b/beehive/js/components/beesComponent/beesComponent.css
@@ -1,8 +1,8 @@
 .beesComponent{
     background-color: ivory;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+    height: inherit;
     padding: 0px 5px 0px 5px;
+    overflow: auto;
+
 }
