--- a/beehive/js/components/mainComponent/mainComponent.css
+++ b/beehive/js/components/mainComponent/mainComponent.css
@@ -1,19 +1,16 @@
 .mainComponent{
-    /* position: absolute; */
-    width: 100vw;
-    height: 100vh;
-    /* overflow: hidden; */
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .mainComponent_content{
     background-color: beige;
-    /* position: absolute; */
-    left: 0px;
+    position: relative;
     top: var(--navbar-height);
     width: 100%;
-    /* height: auto; */
-    margin-top: var(--navbar-height);
-
+    
     display: flex;
     flex-direction: row;
     
