--- a/beehive/css/style.css
+++ b/beehive/css/style.css
@@ -5,19 +5,30 @@
     --text-color: #14203F;
     --navbar-color: #FFFD44;
     --navbar-height: 70px;
+    --backgroud-color: white;
 }
 
-body, html {
+body,
+html {
     overflow-x: none;
     height: 100%;
 }
 
 * {
-    padding: 0; margin: 0; font-family: 'Poppins', sans-serif;}
-h1 { color: var(--primary-color)}
-h2 { color: var(--secondary-color)}
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
 
-button{
+h1 {
+    color: var(--primary-color)
+}
+
+h2 {
+    color: var(--secondary-color)
+}
+
+button {
     min-height: 60px;
     border-style: none;
     padding: 10px 10px 10px 10px;
@@ -28,7 +39,7 @@ button{
     outline: none;
 }
 
-button:focus{
+button:focus {
     outline: none;
 }
 
