--- a/beehive/js/components/mainComponent/mainComponent.css
+++ b/beehive/js/components/mainComponent/mainComponent.css
@@ -1,17 +1,27 @@
-.mainComponent{
+.mainComponent {
     position: fixed;
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
-.mainComponent_content{
-    background-color: beige;
+.mainComponent_content {
+    background-color: var(--background-color);
     position: relative;
     top: var(--navbar-height);
     width: 100%;
-    
     display: flex;
     flex-direction: row;
-    
+}
+
+.mainComponent_fade {
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: inherit;
+    padding: 0px 5px 0px 5px;
+    overflow: auto;
+    position: absolute;
+    z-index: 2;
+    opacity: 0;
+    pointer-events: none;
 }
