--- a/beehive/js/components/postListComponent/postListComponent.css
+++ b/beehive/js/components/postListComponent/postListComponent.css
@@ -1,7 +1,9 @@
-.beesComponent {
+.postListComponent {
+    position: absolute;
     background-color: ivory;
     width: 100%;
     height: inherit;
     padding: 0px 5px 0px 5px;
     overflow: auto;
+    z-index: 20;
 }
