--- a/js/components/beeComponent/beeComponent.css
+++ b/js/components/beeComponent/beeComponent.css
@@ -91,9 +91,9 @@
         line-height: 1.5;
     }
     .beeComponent_avatar {
-        width: 50px;
-        height: 50px;
-        border-radius: 60px;
-        margin-left: 20px;
+        width: calc(100% - 10px);
+        height: calc(100% - 20px);
+        /* margin-left: 20px; */
+        object-fit: cover;
     }
 }
