--- a/js/components/navbarComponent/navbarButtonComponent.css
+++ b/js/components/navbarComponent/navbarButtonComponent.css
@@ -1,10 +1,10 @@
 .navbarButtonComponent {
-    /* position: relative; */
+    position: relative;
     width: 40px;
     height: 40px;
 }
 
-navbar.navbarButtonComponent_icon {
+.navbarButtonComponent_icon {
     width: 40px;
     height: 40px;
     position: absolute;
