--- a/js/components/navbarComponent/navbarComponent.css
+++ b/js/components/navbarComponent/navbarComponent.css
@@ -19,9 +19,9 @@
 }
 
 .navbarComponent_backBtn_position {
-    /* margin: 0px 0px 0px 10px; */
+    margin: 0px 0px 0px 10px;
 }
 
 .navbarComponent_addBtn_position {
-    /* margin: 0px 10px 0px 0px; */
+    margin: 0px 10px 0px 0px;
 }
