--- a/js/components/beeComponent/beeComponent.css
+++ b/js/components/beeComponent/beeComponent.css
@@ -1,27 +1,18 @@
 .beeComponent {
-    background-color: lightblue;
+    /* position: absolute; */
+    background-color: var(--primary-color);
     width: 100%;
     height: 70px;
-    margin: 5px 0px 0px 0px;
+    margin: 0px 0px 5px 0px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
-.beeComponent_name {
-    background-color: var(--primary-color);
-    /* width: 100%; */
-    height: 175px;
-    margin: 0px 0px 5px 0px;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: row;
-}
-
 .beeComponent_avatar_container {
-    width: 20%;
     height: 100%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,8 +20,8 @@
 }
 
 .beeComponent_info_container {
-    width: 65%;
     height: 100%;
+    width: 65%;
     padding: 0px 0px 0px 20px;
     display: flex;
     flex-direction: column;
@@ -38,8 +29,8 @@
 }
 
 .beeComponent_buttons_container {
-    width: 15%;
     height: 85%;
+    width: 15%;
     padding: 0px 20px 0px 0px;
     display: flex;
     flex-direction: column;
