--- a/js/components/beesComponent/beesComponent.css
+++ b/js/components/beesComponent/beesComponent.css
@@ -1,7 +1,7 @@
 .beesComponent {
-    background-color: ivory;
+    background-color: var(--background-color);
     width: 100%;
     height: inherit;
-    padding: 0px 5px 0px 5px;
+    padding: 5px 5px 0px 5px;
     overflow: auto;
 }
