--- a/js/components/postListComponent/postListComponent.css
+++ b/js/components/postListComponent/postListComponent.css
@@ -1,9 +1,9 @@
 .postListComponent {
     position: absolute;
-    background-color: ivory;
+    background-color: var(--background-color);
     width: 100%;
     height: inherit;
-    padding: 0px 5px 0px 5px;
+    padding: 5px 5px 0px 5px;
     overflow: auto;
     z-index: 20;
 }
