--- a/js/components/beeComponent/beeComponent.css
+++ b/js/components/beeComponent/beeComponent.css
@@ -2,7 +2,7 @@
     /* position: absolute; */
     background-color: var(--primary-color);
     width: 100%;
-    height: 70px;
+    height: 175px;
     margin: 0px 0px 5px 0px;
     display: flex;
     flex-direction: row;
@@ -39,35 +39,35 @@
 }
 
 .beeComponent_name {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     color: white;
-    line-height: 1;
+    line-height: 1.25;
     margin: 0px;
 }
 
 .beeComponent_email {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
-    line-height: 1;
+    line-height: 1.25;
     color: var(--text-color);
 }
 
 .beeComponent_website {
-    font-size: 20px;
-    line-height: 1;
+    font-size: 15px;
+    line-height: 1.25;
     color: var(--website-color);
 }
 
 .beeComponent_avatar {
-    max-width: 120px;
-    height: auto;
-    border-radius: 50%;
+    max-width: calc(100% - 10px);
+    height: calc(100% - 20px);
+    border-radius: 0px;
     border-width: 5px;
     border-style: solid;
     border-color: white;
     margin-left: 10px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 @media (max-width: 600px) and (orientation: portrait) {
@@ -82,9 +82,9 @@
         line-height: 1.5;
     }
     .beeComponent_avatar {
-        width: calc(100% - 10px);
-        height: calc(100% - 20px);
+        /* width: calc(100% - 10px);
+        height: calc(100% - 20px); */
         /* margin-left: 20px; */
-        object-fit: cover;
+        /* object-fit: cover; */
     }
 }
