--- a/js/components/navbarComponent/navbarButtonComponent.css
+++ b/js/components/navbarComponent/navbarButtonComponent.css
@@ -1,13 +1,14 @@
 .navbarButtonComponent {
-    position: relative;
+    /* position: relative; */
     width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 
 .navbarButtonComponent_icon {
     width: 40px;
     height: 40px;
-    position: absolute;
+    /* position: absolute; */
     bottom: 0px;
     left: 0px;
 }
