--- a/js/components/newPostComponent/newPostComponent.css
+++ b/js/components/newPostComponent/newPostComponent.css
@@ -1,12 +1,13 @@
     .newPostComponent {
-        position: absolute;
-        background-color: var(--primary-color);
+        /* position: absolute; */
+        background-color: var(--post-container-color);
         width: calc(100% - 10px);
         height: auto;
         padding: 5px 0px 5px 0px;
         margin: 0px 0px 5px 0px;
-        overflow: auto;
-        z-index: 20;
+        /* overflow: auto; */
+        /* z-index: 20; */
+        display: flex;
         flex-direction: column;
         align-items: center;
     }
@@ -17,11 +18,18 @@
         width: calc(100% - 10px);
         height: 40px;
         margin: 0px 0px 5px 0px;
-        padding: 0px 0px 0px 0px;
+        /* padding: 0px 0px 0px 5px; */
         border-radius: 5px;
     }
     
-    .newPostComponent_label {
+    .newPostComponent_titleLabel {
+        font-size: 15px;
+        color: var(--text-color);
+        margin: 10px 0px 0px 5px;
+        align-self: flex-start;
+    }
+    
+    .newPostComponent_bodyLabel {
         font-size: 15px;
         color: var(--text-color);
         margin: 10px 0px 0px 5px;
@@ -34,17 +42,18 @@
         width: calc(100% - 10px);
         height: 60px;
         margin: 0px 0px 5px 0px;
-        padding: 0px 0px 0px 0px;
+        /* padding: 0px 0px 0px 5px; */
         border-radius: 5px;
     }
     
     .newPostComponent_buttons_container {
-        height: 40px;
         width: 100%;
+        height: 40px;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+        /* margin: 20px 0px 0px 0px; */
     }
     
     .newPostComponent_continue_btn {
@@ -59,6 +68,7 @@
         border-radius: 5px;
         width: calc(60% - 10px);
         height: inherit;
+        cursor: pointer;
     }
     
     .newPostComponent_cancel_btn {
@@ -71,6 +81,21 @@
         font-weight: bold;
         color: white;
         border-radius: 5px;
-        width: calc(60% - 5px);
+        width: calc(40% - 5px);
         height: inherit;
+        cursor: pointer;
+    }
+    
+    .newPostComponent_titleError {
+        /* font: 12px;
+        color: var(--error-color);
+        margin: -2px 0px 10px 5px;
+        align-self: flex-start;
+        font-weight: bold; */
+    }
+    
+    .newPostComponent_inputError {
+        /* border-style: solid;
+        border-color: var(--error-color);
+        border-width: 2px; */
     }
