--- a/js/components/postComponent/postComponent.css
+++ b/js/components/postComponent/postComponent.css
@@ -1,35 +1,48 @@
 .postComponent {
-    background-color: var(--background-color);
+    background-color: var(--post-container-color);
     width: calc(100% - 10px);
     height: auto;
     margin: 0px 0px 5px 0px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
 }
 
 .postComponent_title {
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
-    color: white;
+    color: var(--text-color);
     line-height: 1.25;
-    margin: 20px 10px 20px 10px;
+    margin: 20px 10px 10px 10px;
 }
 
 .postComponent_body {
     font-size: 20px;
-    font-weight: bold;
-    color: var(--text-color);
     line-height: 1.25;
+    color: var(--text-color);
     margin: 0px 10px 20px 10px;
 }
 
 .postComponent_comments_container {
-    background-color: gray;
-    width: calc(100% - 10px);
-    height: 200px;
-    /* margin: 0pc 5px 5px 5px; */
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.postComponent_addComment_button {
+    background-color: var(--post-add-comment-button);
+    width: calc(100% - 10px);
+    height: 40px;
+    margin: 0px 0px 5px 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
