--- a/js/components/beeComponent/beeComponent.css
+++ b/js/components/beeComponent/beeComponent.css
@@ -1,6 +1,8 @@
 .beeComponent {
     /* position: absolute; */
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
+    background-color: rgb(94, 94, 94);
+    border-radius: 15px;
     width: 100%;
     height: 175px;
     margin: 0px 0px 5px 0px;
@@ -31,7 +33,7 @@
 .beeComponent_buttons_container {
     height: 85%;
     width: 15%;
-    padding: 0px 20px 0px 0px;
+    padding: 0px 25px 0px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -40,17 +42,18 @@
 
 .beeComponent_name {
     font-size: 30px;
-    font-weight: bold;
+    /* font-weight: bold; */
     color: white;
     line-height: 1.25;
-    margin: 0px;
+    margin-bottom: 50px;
 }
 
 .beeComponent_email {
     font-size: 15px;
     font-weight: bold;
     line-height: 1.25;
-    color: var(--text-color);
+    color: rgb(36, 36, 36);
+    margin-bottom: 5px;
 }
 
 .beeComponent_website {
@@ -62,12 +65,12 @@
 .beeComponent_avatar {
     max-width: calc(100% - 10px);
     height: calc(100% - 20px);
-    border-radius: 0px;
-    border-width: 5px;
+    border-width: 2px;
     border-style: solid;
-    border-color: white;
+    border-color: rgb(36, 36, 36);
     margin-left: 10px;
     object-fit: cover;
+    border-radius: 15px;
 }
 
 @media (max-width: 600px) and (orientation: portrait) {
@@ -83,8 +86,8 @@
     }
     .beeComponent_avatar {
         /* width: calc(100% - 10px);
-        height: calc(100% - 20px); */
-        /* margin-left: 20px; */
-        /* object-fit: cover; */
+        height: calc(100% - 20px);
+        margin-left: 20px;
+        object-fit: cover; */
     }
 }
