--- a/js/components/albumComponent/albumComponent.css
+++ b/js/components/albumComponent/albumComponent.css
@@ -1,10 +1,17 @@
 .albumComponent {
-
-    background-color: yellow;
+    background-color: var(--post-container-color);
+    width: calc(100% - 10px);
     height: auto;
     margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .albumComponent_title {
     font-size: 35px;
+    font-weight: bold;
+    color: var(--text-color);
+    line-height: 1.25;
+    margin: 20px 10px 10px 10px;
 }
