Album component update

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     --continue-button-color: #4F81FA;
     --cancel-button-color: #666666;
     --error-color: red;
+    --thumbnail-color: #e6e6e6;
 }
 
 body,
