--- a/js/components/albumComponent/albumComponent.css
+++ b/js/components/albumComponent/albumComponent.css
@@ -5,7 +5,9 @@
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .albumComponent_title {
@@ -14,4 +16,47 @@
     color: var(--text-color);
     line-height: 1.25;
     margin: 20px 10px 10px 10px;
+    text-align: center;
+    user-select: none;
+    cursor: [pointer];
 }
+
+.albumComponent_thumbnailsContainer {
+    width: 100%;
+    height: auto;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.albumComponent_down_icon {
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    cursor: pointer;
+    font-weight: 10px;
+}
+
+.albumComponent_up_icon {
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    cursor: pointer;
+}
+
+
+/* .albumComponent_thumbnail {
+    width: 100px;
+    height: auto;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+} */
