New comment component build

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --post-container-color: #B9CDFD;
     --post-add-comment-button: #4F81FA;
     --comment-container-color: #DCE6FE;
+    --new-comment-container-color: #DCE6FE;
     --continue-button-color: #4F81FA;
     --cancel-button-color: #666666;
     --error-color: red;
