--- a/js/components/todoComponent/todoComponent.css
+++ b/js/components/todoComponent/todoComponent.css
@@ -6,16 +6,27 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     user-select: none;
     cursor: pointer;
 }
 
-.todoComponent_title {
+.todoComponent_text_container {
     width: 90%;
+    margin: 10px 10px 10px 10px;
+}
+
+.todoComponent_title {
     font-size: 20px;
     line-height: 1.25;
     color: var(--text-color);
-    margin: 10px 10px 10px 10px;
+    pointer-events: none;
+}
+
+.todoComponent_email {
+    font-size: 13px;
+    line-height: 1.25;
+    color: var(--processing-color);
     pointer-events: none;
 }
 
